<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="app.chat.myapplication.MainActivity">
    <item
        android:id="@+id/action_reconnect"
        android:orderInCategory="1"
        android:title="@string/action_reconnect"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="4"
        android:title="@string/action_exit"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share_app"
        android:orderInCategory="2"
        android:title="@string/action_share_app"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_rate_app"
        android:orderInCategory="3"
        android:title="@string/action_rate_app"
        app:showAsAction="never"/>
</menu>
