<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_register_activity"
    tools:context="app.chat.letschat.SplashScreen">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Let's Chat"
            android:textColor="@android:color/white"
            android:textSize="48dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/app_name_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@id/app_name"
            android:text="Best Random Stranger Chat App"
            android:textColor="@android:color/white"
            android:textStyle="italic"
            android:textSize="17sp"/>
        <RelativeLayout
            android:layout_width="250dp"
            android:layout_height="175dp"
            android:background="@android:color/white"
            android:layout_below="@id/app_name_2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">
            <EditText
                android:id="@+id/user_name"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/edit_text"
                android:hint="@string/text_enter_display_name"
                android:imeOptions="actionNext"
                android:inputType="textNoSuggestions"
                android:lines="1"
                android:maxLength="25"
                android:paddingBottom="4dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="6dp"
                android:textSize="15sp"
                android:textColor="@android:color/black">

                <requestFocus />
            </EditText>
            <EditText
                android:id="@+id/user_age"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_below="@id/user_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text"
                android:hint="@string/text_enter_age"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:lines="1"
                android:maxLength="3"
                android:paddingBottom="4dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="6dp"
                android:textSize="15sp"
                android:textColor="@android:color/black"/>

            <RadioGroup
                android:id="@+id/radio_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_age"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_button_male"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_male" />

                <RadioButton
                    android:id="@+id/radio_button_female"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_female" />
            </RadioGroup>

            <Button
                android:id="@+id/button_submit"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_below="@id/radio_button"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:background="@color/background_register_activity"
                android:text="Go"
                android:elevation="5dp"
                android:textColor="@android:color/white" />
        </RelativeLayout>
    </RelativeLayout>






</RelativeLayout>
